# pde-opt

./: .gitignore  .pre-commit-config.yml  .readthedocs.yml  LICENSE  README.md  environment.yml  pyproject.toml  submit_rl_zoo.sh  submit_training.sh
.github/workflows/: python-package.yml
docs/: api.rst  authors.rst  conf.py  index.rst  pde_opt.numerics.rst  pde_opt.pde_env.rst  pde_opt.pde_model.rst
docs/notebooks/: optimization_3D.ipynb  optimization_neural_network copy.ipynb  optimization_neural_network.ipynb  optimize_nn_script.py  solving_pde_smoothed_boundary.ipynb  training.log-3601328-4294967294  training.log-3614732-4294967294  training.log-3622500-4294967294  training.log-3622545-4294967294
notebooks/: optimize_nn_script.py  reference.npy  run_advection_diffusion.ipynb  run_butler_volmer_sbm.ipynb  run_cahn_hilliard.ipynb  run_gpe.ipynb  run_training.sh  smooth_boundary.ipynb  test_ac_convergence.ipynb  test_boundary_conditions.ipynb  test_ch_convergence.ipynb  test_implicit.ipynb  test_optimization_model.ipynb  test_pde_RL.ipynb  test_pde_env.ipynb  test_pde_env_new.ipynb  test_rl.ipynb  test_rl_2.ipynb  test_sympy.ipynb  test_tanh.ipynb  test_thomas_fermi.ipynb  tmp.py
pde_opt/: __init__.py  model.py  pde_env.py  pde_model.py  rl_utils.py  utils.py
pde_opt/data/: ground_state.npy
pde_opt/environments/: advection_diffusion_env.py  base_env.py  flexible_env.py
pde_opt/numerics/: __init__.py  domains.py  equations.py  functions.py  (+2 more)
scripts/: rl_zoo_video.py  run_training.py
tests/: test_functions.py  test_rhs_convergence.py  test_solvers.py
(+18 files in other folders)
