[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pde_opt"
version = "0.1.0"
description = "Library for PDE optimization and control with gradient-based methods and reinforcement learning"
authors = [
    { name = "Alexander E Cohen", email = "aecohen@mit.edu" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "jax>=0.6.2",
    "gymnasium>=1.1.1",
    "diffrax>=0.7.0",
    "equinox>=0.12.2",
    "optimistix>=0.0.10",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
    "einops>=0.8.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pde_opt*"]

[tool.ruff]
exclude = ["notebooks"]